--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 				<div class="modal">
 					<div class="modal__card">
 						<i class="ri-close-large-line modal__close"></i>
-						<img src="public/img/Vigilante.png" alt="image" class="modal__img">
+						<img src="public/img/vigilante.png" alt="image" class="modal__img">
 						<div>
 							<h3 class="modal__name6">Vigilante</h3>
 							<p class="modal__info">
