--- a/index.html
+++ b/index.html
@@ -203,8 +203,9 @@
 		</div>
 		<div class="baixe-container">
 			<div class="s4-container" id="s4-background">
+				<div class="s4-container" id="s4-background">
 				<button class="download">
-					Download
+					<a href="public/download/CINCO NOITES NO CETEPI 2.exe">DOWNLOAD</a>
 				</button>
 				<div class="requisitos">
 					<p class="minimos">
