--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 			<div class="s4-container" id="s4-background">
 				<div class="s4-container" id="s4-background">
 				<button class="download">
-					<a href="public/download/CINCO NOITES NO CETEPI 2.exe">DOWNLOAD</a>
+					<a href="https://drive.google.com/file/d/1x7EYjBc6OUb5XBLVZDQ6EF4cipsBxQ6t/view">DOWNLOAD</a>
 				</button>
 				<div class="requisitos">
 					<p class="minimos">
