--- a/index.html
+++ b/index.html
@@ -210,19 +210,19 @@
 				<div class="requisitos">
 					<p class="minimos">
 						Requisitos minimos: <br>
+						Sistema Operacional: Windows 7 <br>
+						Processador: Intel Core 2 Duo <br>
+						Memória: 2GB <br>
+						Armazenamento: 1GB <br>
+						Placa de vídeo: HD Graphics 2000
+					</p>
+					<p class="recomendados">
+						Requisitos recomendados: <br>
 						Sistema Operacional: Windows 10 <br>
 						Processador: Intel Core i3 3th Gen <br>
 						Memória: 4GB <br>
 						Armazenamento: 1GB <br>
 						Placa de vídeo: GT 220
-					</p>
-					<p class="recomendados">
-						Requisitos recomendados: <br>
-						Sistema Operacional: Windows 11 <br>
-						Processador: Intel Core i5 7th Gen <br>
-						Memória: 8GB <br>
-						Armazenamento: 1GB <br>
-						Placa de vídeo: GTX 750ti
 					</p>
 				</div>
 			</div>
