--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							jogo Five Nights at Freddy's. Na paródia, o cenário do jogo é a própria escola, com os
 							professores
 							assumindo o papel dos animatrônicos e o jogador sendo o vigilante noturno.</span>
-						<a href="#" class="info__button">Saiba mais na WIKI</a>
+						<a href="https://samuelsouza771.github.io/wiki-fnac/" class="info__button">Saiba mais na WIKI</a>
 					</div>
 				</article>
 				<article class="info__article">
@@ -62,7 +62,7 @@
 							desenvolvimento prático.
 							Também promove a interação com a comunidade, preparando os alunos para desafios
 							futuros.</span>
-						<a href="#" class="info__button">Saiba mais na WIKI</a>
+						<a href="https://samuelsouza771.github.io/wiki-fnac/" class="info__button">Saiba mais na WIKI</a>
 					</div>
 				</article>
 				<article class="info__article">
@@ -76,7 +76,7 @@
 							professores
 							da escola, e disponibiliza o download do jogo, permitindo que os visitantes possam
 							experimentá-lo.</span>
-						<a href="#" class="info__button">Saiba mais na WIKI</a>
+						<a href="https://samuelsouza771.github.io/wiki-fnac/" class="info__button">Saiba mais na WIKI</a>
 					</div>
 				</article>
 			</div>
